--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:8Qioc08NpNROy+dSNtGHlfCMwZWq9WkcvTP2Iv2mnJU=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost:8000
+APP_URL=http://localhost:8001
 #FRONTEND_URL=http://localhost:3000 (not using it because in config/cors.php is *)
 SANCTUM_STATEFULL_DOMAINS=localhost:3000
 
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=shoppingcart
+DB_DATABASE=mycart
 DB_USERNAME=root
 DB_PASSWORD=
 
